Changes to About section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     <p>
                         I'm Jonathan Benn and I create beautiful dynamic web apps.<br/> 
                         <br/>
-                        I've crafted educational platforms, AI-driven applications, captivating landing pages, and more. With a keen eye for design and a coder's logic, I deliver experiences that blend beauty with functionality, ensuring each project not only captivates but converts. </br>
+                        I've crafted educational platforms, AI-driven applications, captivating landing pages, and more. <br/>
+                        <br/>
+                        With a keen eye for design and a coder's logic, I deliver experiences that blend beauty with functionality, ensuring each project not only captivates but converts. </br>
                         <br/>
                         Elevate your digital presence with solutions crafted for engagement and innovation. Let's connect and transform your vision into a digital masterpiece.
                     </p>
@@ -68,7 +70,7 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">AI Powered Tools</p>
+                            <p class="large-text">AIPowered Tools</p>
                             <p class="small-text">Projects <br/> Completed</p>
                         </div>
                     </div>
@@ -82,6 +84,56 @@
                         <div class="abt-text">
                             <p class="large-text">Corporate Sites</p>
                             <p class="small-text">Projects <br/> Completed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-stats">
+                <h4 class="stat-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">html 5</p>
+                        <div class="progress-container">
+                            <p class="prog-text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">CSS</p>
+                        <div class="progress-container">
+                            <p class="prog-text">95%</p>
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Javascript</p>
+                        <div class="progress-container">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="javascript"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">React Native</p>
+                        <div class="progress-container">
+                            <p class="prog-text">30%</p>
+                            <div class="progress">
+                                <span class="react-native"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">UI Design</p>
+                        <div class="progress-container">
+                            <p class="prog-text">100%</p>
+                            <div class="progress">
+                                <span class="ui-design"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
