--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="/Volumes/G-DRIVE PRO/Portfolio_Jonathan_Benn/img/Jonathan_Benn_image.png" alt=""> 
+                    <img src="/img/Jonathan_Benn_image.png" alt=""> 
                 </div>
             </div>
             <div class="right-header">
@@ -29,7 +29,7 @@
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
-                        <span class="btn-txt">Download CV</span> 
+                        <span class="btn-text">Download CV</span> 
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>                    
                 </div>
@@ -51,12 +51,10 @@
                         I've crafted educational platforms, AI-driven applications, captivating landing pages, and more. <br/>
                         <br/>
                         With a keen eye for design and a coder's logic, I deliver experiences that blend beauty with functionality, ensuring each project not only captivates but converts. </br>
-                        <br/>
-                        Elevate your digital presence with solutions crafted for engagement and innovation. Let's connect and transform your vision into a digital masterpiece.
                     </p>
                     <div class="btn-con">
                         <a href="" class="main-btn">
-                            <span class="btn-txt">Download CV</span> 
+                            <span class="btn-text">Download CV</span> 
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>                    
                     </div>
@@ -65,25 +63,25 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">Education Platforms</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="small-text">A custom-built Bitcoin education course.</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">AIPowered Tools</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="large-text">AI-Powered Tools</p>
+                            <p class="small-text">Web apps utilizing OpenAI's API.
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">Landing Pages</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="small-text">Captivating pages for converting visitors into cusomters.</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">Corporate Sites</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="small-text">Sleek, modern, and responsive corporate websites. </p>
                         </div>
                     </div>
                 </div>
