Added profile image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="/img/Jonathan_Benn_image.png" alt=""> 
+                    <img src="img/jonathan_benn_photo.jpeg" alt=""> 
                 </div>
             </div>
             <div class="right-header">
