--- a/index.html
+++ b/index.html
@@ -126,7 +126,16 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">UI Design</p>
+                        <p class="prog-title">Bubble.io</p>
+                        <div class="progress-container">
+                            <p class="prog-text">100%</p>
+                            <div class="progress">
+                                <span class="ui-design"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Wordpress</p>
                         <div class="progress-container">
                             <p class="prog-text">100%</p>
                             <div class="progress">
@@ -136,8 +145,53 @@
                     </div>
                 </div>
             </div>
+            <h4 class="stat-title">Education & Certificates</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa-solid fa-graduation-cap"></i>
+                    </div>
+                    <p class="timeline-duration">2014 - 2018</p>
+                    <h5>University of Arizona<span></span></h5>
+                    <p>
+                        Major: Information Science & eSociety <br/>
+                        Minor: Computer Science
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa-solid fa-file"></i>
+                    </div>
+                    <p class="timeline-duration">2023</p>
+                    <h5>The Odin Project<span></span></h5>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-icon">
+                        <i class="fa-solid fa-file"></i>
+                    </div>
+                    <p class="timeline-duration">2023</p>
+                    <h5>Meta Frontend Developer Course<span></span></h5>
+                </div>
+            </div>
         </section>
-        <section class="section sect3 portfolio" id="portfolio"></section>
+        <section class="section sect3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My<span>Portfolio</span><span class="bg-text">My Work</span></h2>
+            </div>
+            <p class="portfolio-text">
+                Here is some of my work that I've done in various programming languages and platforms.
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/portfolio1.jpg" alt="">
+                    </div>
+                    <div class="hover-item">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sect4 blogs" id="blogs"></section>
         <section class="section sect5 contact" id="contact"></section>
     </main>
