Added first project to portfolio

--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
                         <img src="img/portfolio1.jpg" alt="">
                     </div>
                     <div class="hover-item">
-                        
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://www.bitcoinbrainiac.org" target="_blank"></a>
+                            <i class="fa-brands fa-bitcoin"></i>
+                        </div>
                     </div>
                 </div>
             </div>
