Updated portfolio section
Added hover info over projects

--- a/index.html
+++ b/index.html
@@ -184,13 +184,19 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/portfolio1.jpg" alt="">
+                        <img src="img/bitcoin_brainiac_image_placeholder.jpeg" alt="">
                     </div>
-                    <div class="hover-item">
-                        <h3>Project Source</h3>
+                    <div class="hover-items">
+                        <h3>Bitcoin Brainiac</h3>
+                        <p>Bitcoin Education Course & Newsletter Platform</p>
                         <div class="icons">
-                            <a href="https://www.bitcoinbrainiac.org" target="_blank"></a>
-                            <i class="fa-brands fa-bitcoin"></i>
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
