Began building blog section

--- a/index.html
+++ b/index.html
@@ -196,7 +196,23 @@
                             <a href="#" class="icon">
                                 <i class="fa-solid fa-link"></i>
                             </a>
-                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/AirFry.ai_portfolio_screenshot.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>AirFry.ai</h3>
+                        <p>Air Fryer cooking instructions and recipes generaeted with AI.</p>
+                        <div class="icons">
+                            <a href="#" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
