--- a/index.html
+++ b/index.html
@@ -218,7 +218,28 @@
                 </div>
             </div>
         </section>
-        <section class="section sect4 blogs" id="blogs"></section>
+        <section class="section sect4 blogs" id="blogs">
+            <div class="blogs-content">
+                <div class="main-title">
+                    <h2>My<span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                    <div class="blogs">
+                        <div class="blog">
+                            <img src="img/blog1.jpeg" alt="">
+                            <div class="blog-text">
+                                <h4>Creating a new hyper-exclusive dating app.</h4>
+                                <p>This app will be exclusive to wealthy men and attractive women.</p>
+                            </div>
+                        </div>
+                        <div class="blog">
+                            
+                        </div>
+                        <div class="blog">
+                            
+                        </div>
+                    </div>
+                 </div>
+            </div>
+        </section>
         <section class="section sect5 contact" id="contact"></section>
     </main>
 
